Enabled oxygen on Frontier
Itty bitty patch

--- a/OR/Configs/Frontier.cfg
+++ b/OR/Configs/Frontier.cfg
@@ -161,7 +161,7 @@
 		Atmosphere				
 		{				
 			enabled =	True			
-			oxygen =	False			
+			oxygen =	True			
 			altitude =	43000			
 			adiabaticIndex =	1.34			
 			atmosphereMolarMass =	0.04023			
