--- a/OR/Configs/Echo.cfg
+++ b/OR/Configs/Echo.cfg
@@ -110,6 +110,20 @@
 					value = 1.0
 					color = #24AF45
 				}
+				Biome
+				{
+					name = Pink Algae Lake
+					displayName = Pink Algae Lake
+					value = 1.5
+					color = #7B3973
+				}
+				Biome
+				{
+					name = Heart Lagoon
+					displayName = Heart Lagoon
+					value = 1.5
+					color = #054D00
+				}
 			}
 		}
 		Orbit
@@ -144,6 +158,12 @@
 			{
 				texture = OR/OR_Textures/PluginData/Echo_Watermap_New.dds
 				normals = OR/OR_Textures/PluginData/Echo_Normal.png
+			}
+			VertexColorMapEmissive
+			{
+				map = OR/OR_Textures/PluginData/Echo_Emissive.dds
+				brightness = 0.5
+				transparency = 0.5
 			}
 		}						
 		Atmosphere				
