--- a/OR/Configs/Odyssey.cfg
+++ b/OR/Configs/Odyssey.cfg
@@ -7,7 +7,7 @@
 		cacheFile =  OR/Cache/Odyssey.bin
 		Template
 		{
-			name = Ike
+			name = Moho
 			removeAllPQSMods = true
 		}
 		Properties
@@ -130,8 +130,8 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 150000
-			fadeEnd = 160000
+			fadeStart = 100000
+			fadeEnd = 120000
 			Material
 			{
 				shininess = 0.03
@@ -140,8 +140,14 @@
 			}
 			OnDemand
 			{
-				texture = OR/OR_Textures/PluginData/Odyssey_Color.dds
-				normals = OR/OR_Textures/PluginData/Odyssey_Normal.png
+				texture = OR/OR_Textures/PluginData/Odyssey_SPColor.dds
+				normals = OR/OR_Textures/PluginData/Odyssey_Normal.dds
+			}
+			VertexColorMapEmissive
+			{
+				map = OR/OR_Textures/PluginData/Odyssey_Emissive.dds
+				brightness = 1
+				transparency = 0.5
 			}
 		}			
 		PQS
@@ -150,8 +156,8 @@
 			maxLevel = 8
 			minDetailDistance = 10
 			maxQuadLengthsPerFrame = 0.03
-			fadeStart = 150000
-			fadeEnd = 160000
+			fadeStart = 100000
+			fadeEnd = 120000
 			deactivateAltitude = 170000
 			materialType = AtmosphericTriplanarZoomRotation
 			PhysicsMaterial
@@ -165,44 +171,44 @@
 			Material
 			{				
 				factor = 10
-				factorBlendWidth = 0.1
-				factorRotation = 0
-				saturation = 2.5
-				contrast = 1.25
+				factorBlendWidth = 0.05
+				factorRotation = 180
+				saturation = 1.25
+				contrast = 1
 				tintColor = 1,1,1,0
 				specularColor = 0.00, 0.00, 0.00, 1
-				albedoBrightness = 1.5
-				steepPower = 1.5
-				steepTexStart = 20000
-				steepTexEnd = 30000
-				steepTex = BUILTIN/dresSteepDiffuse
+				albedoBrightness = 1
+				steepPower = 1
+				steepTexStart = 50000
+				steepTexEnd = 60000
+				steepTex = BUILTIN/laythSteep_diff
 				steepTexScale = 1,1
 				steepTexOffset = 0,0
-				steepBumpMap = BUILTIN/DresSteepNRM
+				steepBumpMap = BUILTIN/laytheSteep_nrm
 				steepBumpMapScale = 1,1
 				steepBumpMapOffset = 0,0
-				steepNearTiling = 175
-				steepTiling = 75
-				lowTex = OR/OR_Textures/PluginData/Terrain/Odyssey.dds //BUILTIN/dresSteepDiffuse
+				steepNearTiling = 350
+				steepTiling = 100
+				lowTex = OR/OR_Textures/PluginData/Terrain/Cracked.dds //BUILTIN/laytheSand_diffuse
 				lowTexScale = 1,1
 				lowTexOffset = 0,0
 				lowTiling = 150000
-				midTex = OR/OR_Textures/PluginData/Terrain/Odyssey.dds //BUILTIN/dresSteepDiffuse
+				midTex =  OR/OR_Textures/PluginData/Terrain/Cracked.dds //BUILTIN/laytheSnow_diff
 				midTexScale = 1,1
 				midTexOffset = 0,0
 				midTiling = 150000
-				midBumpMap = OR/OR_Textures/PluginData/Terrain/Tension_Normal.dds //BUILTIN/DresSteepNRM
+				midBumpMap =  OR/OR_Textures/PluginData/Terrain/Cracked_Normal.dds //BUILTIN/laytheSand_nrm
 				midBumpMapScale = 1,1
 				midBumpMapOffset = 0,0
 				midBumpTiling = 150000
-				highTex = OR/OR_Textures/PluginData/Terrain/Odyssey.dds //BUILTIN/dresSteepDiffuse
+				highTex =  OR/OR_Textures/PluginData/Terrain/Cracked.dds //BUILTIN/ikeGround_diffuse
 				highTexScale = 1,1
 				highTexOffset = 0,0
 				highTiling = 150000
-				lowStart = 0
-				lowEnd = 0.3
-				highStart = 0.8
-				highEnd = 1
+				lowStart = -1
+				lowEnd = -1
+				highStart = 2
+				highEnd = 2
 				globalDensity = 1
 				fogColorRampScale = 1,1
 				fogColorRampOffset = 0,0
@@ -313,6 +319,14 @@
 						}
 					}
 				}
+				VertexColorMapEmissive
+				{
+					order = 2
+					enabled = True
+					map = OR/OR_Textures/PluginData/Odyssey_Emissive.dds
+					brightness = 1
+					transparency = 0.5
+				}
 				VertexSimplexHeight
 				{
 					deformity = 100
@@ -351,14 +365,17 @@
 					order = 20
 					enabled = true
 				}
-				VertexHeightMap
+				VertexMitchellNetravaliHeightMap
 				{
 					map = OR/OR_Textures/PluginData/Odyssey_Height.dds
 					offset = 0
 					deformity = 30000
-					scaleDeformityByRadius = false
-					order = 20
-					enabled = true
+					scaleDeformityByRadius = False
+					B = 0.33333333
+					C = 0.33333333
+					order = 1
+					enabled = True
+					name = VertexMitchellNetravaliHeightMap
 				}
 				VertexHeightNoiseVertHeightCurve2
 				{
