--- a/OR/Configs/ScienceDefinitions.cfg
+++ b/OR/Configs/ScienceDefinitions.cfg
@@ -59,7 +59,9 @@
 		CharSrfLandedSIGNALZONE = STRONG SIGNAL DETECTED NEARBY! FURTHER INVESTIGATION REQUIRED. \n\nThe signal source is located almost exactly on Char's north pole. Fracture looms over the horizon menacingly.
 		
 		//Echo (GOOD)
-		EchoSrfSplashedWaters =The ocean surface is calm. There are no alien fish, just small patches of blue algae and bubbles.
+		EchoSrfSplashedWaters = The ocean surface is calm. There are no alien fish, just small patches of blue algae and bubbles.
+		EchoSrfSplashedPinkAlgaeLake = Pink mush clings to the sides of the ship.
+		EchoSrfSplashedHeartLagoon = Green mush clings to the sides of the ship.
 		EchoSrfSplashedRivers = The river flows gently downstream from the mountains.
 		EchoSrfLandedWaters = As sand settles around your craft, the ocean floor comes into view. Poking out of the sediment are various pieces of twisted metal. They are encased in an organic net-like structure.
 		EchoSrfLandedMuddyPlains = Instead of sand, the shores of Echo’s oceans are hidden beneath a deep layer of organic sludge and vegetation. Bleugh.
@@ -223,7 +225,7 @@
 		
 		//Serenity (GOOD)
 		SerenitySrfLanded = So, there is a bottom. You probably shouldn't have seen this. Good luck with returning to Frontier.
-		SerenitySrfSplashed = In theory, there should be a bottom to this ocean. In theory.
+		SerenitySrfSplashed = In theory, there should be a bottom to this ocean. \nIn theory.
 		
 		//Tranquility (GOOD)
 		TranquilitySrfSplashed = Uh...yes...underground ocean?
@@ -346,7 +348,7 @@
 		
 		//Serenity (GOOD)
 		SerenityFlyingLow = It is clear now that yes, Serenity has an ocean. It is not clear, however, if that ocean has an end.
-		SerenityFlyingHigh = Purple, purple everywhere!
+		SerenityFlyingHigh = This place would make for a good cocktail. So many pretty colors!
 		SerenityInSpaceLow = We are literally flying on the edge of the edge.
 		SerenityInSpaceHigh = Serenity is the edge of everything we know. It is the boundary between the Ignotum System, interstellar space, and our old home.
 		
@@ -393,6 +395,8 @@
 		//Echo
 		EchoSrfSplashedWaters = The water is warm and tropical. Ahhhh....
 		EchoSrfSplashedRivers = The water is clear yet devoid of any marine life. All I can feel are rocks and roots.
+		EchoSrfSplashedPinkAlgaeLake = Ughhh -- it stinks here! It feels like I'm swimming through rotten yogurt.
+		EchoSrfSplashedHeartLagoon = Mmmm...soylent green.
 		EchoSrfLandedWaters = *Drowning noises* Oh wait, I'm wearing a spacesuit, nevermind.
 		EchoSrfLandedMuddyPlains = Everything is slimy and gross. On a planet so green, it's a little unnerving to see so much death...
 		EchoSrfLandedForests = What a calm place. If only our ship didn't malfunction....
@@ -554,8 +558,8 @@
 		NightSrfLandedSIGNALZONE = TRANSLATING SIGNAL... \n\n"LUNAR VOYAGER III LOG: \nMISSION BRIEF: analyze--ERROR--surface and observe the orbits of--ERROR--other moons. \nMISSION STATUS: complete. Probe requires maintainance. \nMISSION RESULTS: Orbits successfully mapped. ERROR--look really beautiful in the pictures. Details sent to--ERROR. \nCHANCE OF RECOVERY: 80%" \n\nEND OF SIGNAL.
 		
 		//Serenity (GOOD)
-		SerenitySrfLanded = *Insert Kerbal here* has died from *insert your stupid plan here*
-		SerenitySrfSplashed = If my calculations are correct, the ocean floor is more than a few feet deep. I can't feel it.
+		SerenitySrfLanded = *Insert Kerbal here* has died from *your stupid plan here*
+		SerenitySrfSplashed = If my calculations are correct, the ocean floor is more than a few feet deep; I can't feel it.
 		
 		//Tranquility (GOOD)
 		TranquilitySrfLandedSupersonicEquator = WHOAAAA HEY NOW! DO I LOOK LIKE A KITE TO YOU?!?
@@ -610,6 +614,8 @@
 		//Echo (GOOD)
 		EchoSrfSplashedWaters = Only bacteria and algae are present in the sample. The lack of biodiversity is extremely odd.
 		EchoSrfSplashedRivers = Bacteria and algae are present in the sample. Small root structures are also visible.
+		EchoSrfSplashedPinkAlgaeLake = This algae is anaerobic, sticky, and probably not safe for consumption.
+		EchoSrfSplashedHeartLagoon = This is typical algae on steroids. It's edible, but I don't recommend eating it -- too bitter.
 		EchoSrfLandedWaters = The only difference between here and the surface is that there aren't any trees, just lots and lots of roots of varying sizes.
 		EchoSrfLandedMuddyPlains = The sample contains bacteria, worm-like creatures, and dozens of long plant tendrils. Despite being severed, the roots continue to move.
 		EchoSrfLandedForests = The soil is full of extensive root systems.
@@ -771,8 +777,8 @@
 		NightSrfLandedSIGNALZONE = I wish I could see past the visible light spectrum. But I can't, and so all I see is darkness.
 		
 		//Serenity (GOOD)
-		SerenitySrfLanded = The ocean floor is composed of ice types you didn't know could exist and various exotic iodine compounds.
-		SerenitySrfSplashed = The liquid is full of exotic ice shards and other weird stuff.
+		SerenitySrfLanded = The ocean floor is composed of ice types you didn't know could exist along with various exotic iodine compounds.
+		SerenitySrfSplashed = The liquid is full of exotic ice shards and other weird gunk.
 		
 		//Tranquility (GOOD)
 		TranquilitySrfLandedSupersonicEquator = The wind samples your sample and proceeds to carry it away.
@@ -784,8 +790,8 @@
 		//Odyssey (GOOD)
 		OdysseySrfLandedVoraciousMaw = The ground is made of horror. This is probably not normal.
 		OdysseySrfLandedMawRim = Well, I would love to tell you what this place is made of, but my drill can't handle terrain this chaotic. As in, I fumbled and dropped it into oblivion.
-		OdysseySrfLandedFurrowedEye = I don't think I have the nerves to drill a whole into a moon-sized eye.
-		OdysseySrfLandedSobbingEye = I don't think I have the nerves to drill a whole into a moon-sized eye.
+		OdysseySrfLandedFurrowedEye = I don't think I have the nerves to drill a hole into a glowing, moon-sized eye.
+		OdysseySrfLandedSobbingEye = I don't think I have the stomach to tunnel into a glowing, moon-sized eye.
 		OdysseySrfLandedScrape = The sample contains celestial violence.
 		OdysseySrfLandedSIGNALZONE = [REDACTED]
 		OdysseySrfLandedTrench = The sample contains celestial trauma.
@@ -827,6 +833,8 @@
 		//Echo
 		EchoSrfSplashedWaters = The goo slips out into the blue. It isn't coming back.
 		EchoSrfSplashedRivers = The goo slides across the surface of the water. It isn't coming back.
+		EchoSrfSplashedPinkAlgaeLake = The goo turns green. Weird.
+		EchoSrfSplashedHeartLagoon = The goo turns pink. Strange.
 		EchoSrfLandedWaters = The goo is sucked to the sea floor and absorded by the roots.
 		EchoSrfLandedMuddyPlains = The goo jiggles in disgust.
 		EchoSrfLandedForests = The goo backs as far away from the container opening as possible.
@@ -988,7 +996,7 @@
 		
 		//Serenity (GOOD)
 		SerenitySrfLanded = You can't see it, but the goo is probably not pleased with you.
-		SerenitySrfSplashed = The goo recommends you fly upwards, not downwards.
+		SerenitySrfSplashed = The goo recommends you fly upwards.
 		
 		//Tranquility (GOOD)
 		TranquilitySrfLandedSupersonicEquator = The goo takes to the skies and is obliterated.
