--- a/OR/Configs/Serenity.cfg
+++ b/OR/Configs/Serenity.cfg
@@ -49,21 +49,28 @@
 					name = Equatorial Band
 					displayName = Equatorial Band
 					value = 1.0
-					color = #583B99
+					color = #FFFFFF
 				}
 				Biome
 				{
-					name = Tropic Bands
-					displayName = Tropic Bands
-					value = 1.0
-					color = #2A4B54
+					name = Sunset Band
+					displayName = Sunset Band
+					value = 1.1
+					color = #D38199
+				}
+				Biome
+				{
+					name = Sunrise Band
+					displayName = Sunrise Band
+					value = 1.1
+					color = #D3BC81
 				}
 				Biome
 				{
 					name = Polar Gyres
 					displayName = Polar Gyres
-					value = 1.0
-					color = #84D3D1
+					value = 1.2
+					color = #9F5486
 				}
 			}
 		}
