--- a/OR/Configs/Silence.cfg
+++ b/OR/Configs/Silence.cfg
@@ -129,7 +129,7 @@
 			OnDemand
 			{
 				texture = OR/OR_Textures/PluginData/Silence_Watermap_New.dds
-				normals = OR/OR_Textures/PluginData/Silence_Normal.png
+				normals = OR/OR_Textures/PluginData/Silence_Normal.dds
 			}
 		}		
 		Atmosphere				
