--- a/OR/Configs/Tension.cfg
+++ b/OR/Configs/Tension.cfg
@@ -96,8 +96,8 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 20000
-			fadeEnd = 40000
+			fadeStart = 10000
+			fadeEnd = 30000
 			Material
 			{
 				shininess = 0.1
@@ -106,8 +106,8 @@
 			}
 			OnDemand
 			{
-				texture = OR/OR_Textures/PluginData/Tension_SPColor_New.dds
-				normals = OR/OR_Textures/PluginData/Tension_Normal.png
+				texture = OR/OR_Textures/PluginData/Tension_SPColor_New2.dds
+				normals = OR/OR_Textures/PluginData/Tension_Normal.dds
 			}
 		}
 		PQS
@@ -116,8 +116,8 @@
 			maxLevel = 8
 			minDetailDistance = 10
 			maxQuadLengthsPerFrame = 0.03
-			fadeStart = 20000
-			fadeEnd = 40000
+			fadeStart = 10000
+			fadeEnd = 30000
 			deactivateAltitude = 70000
 			materialType = AtmosphericTriplanarZoomRotation
 			PhysicsMaterial
@@ -371,13 +371,13 @@
 				}
 				VertexColorMap
 				{
-					map = OR/OR_Textures/PluginData/Tension_Color_New.dds
+					map = OR/OR_Textures/PluginData/Tension_Color_New2.dds
 					order = 20
 					enabled = true
 				}
 				VertexMitchellNetravaliHeightMap
 				{
-					map = OR/OR_Textures/PluginData/Tension_Height_New.dds
+					map = OR/OR_Textures/PluginData/Tension_Height_New2.dds
 					offset = 1
 					deformity = 2250
 					scaleDeformityByRadius = False
