--- a/OR/Configs/Vista.cfg
+++ b/OR/Configs/Vista.cfg
@@ -122,7 +122,7 @@
 			OnDemand
 			{
 				texture = OR/OR_Textures/PluginData/Vista_Color_New.dds
-				normals = OR/OR_Textures/PluginData/Vista_Normal.png
+				normals = OR/OR_Textures/PluginData/Vista_Normal.dds
 			}
         }
 		PQS
@@ -134,7 +134,7 @@
 			fadeStart = 10000
 			fadeEnd = 40000
 			deactivateAltitude = 70000
-			mapMaxHeight = 4096
+			mapMaxHeight = 9000
 			materialType = AtmosphericTriplanarZoomRotation
 			PhysicsMaterial
 			{
