--- a/OR/Configs/Windswept.cfg
+++ b/OR/Configs/Windswept.cfg
@@ -157,7 +157,7 @@
 			OnDemand
 			{
 				texture = OR/OR_Textures/PluginData/Windswept_SPColor_New.dds
-				normals = OR/OR_Textures/PluginData/Windswept_Normal.png
+				normals = OR/OR_Textures/PluginData/Windswept_Normal.dds
 			}
 		}	
 		Atmosphere				
