--- a/OR/EVE/Clouds.cfg
+++ b/OR/EVE/Clouds.cfg
@@ -4,7 +4,7 @@ EVE_CLOUDS
 	{
 		name = Echo_Clouds1
 		body = Echo
-		Speed = 0,100,0
+		speed = 0,100,0
 		offset = 0,180,0
 		altitude = 2500
 		settings
@@ -59,31 +59,36 @@ EVE_CLOUDS
 	{
 		name = Echo_Clouds2
 		body = Echo
-		Speed = 0,100,0
+		speed = 0,100,0
 		offset = 0,180,0
 		altitude = 8000
-		speed = 0,100,0
 		settings
 		{
+			_DetailTex = OR/EVE/Textures/detaileve1
+			_UVNoiseTex = OR/EVE/Textures/uvnoise1
 			_DetailScale = 16
+			_DistFade = 1
 			_DistFadeVert = 3.99999E-05
 			_UVNoiseAnimation = 0.2,0.2
 			_UVNoiseStrength = 0.00016
 			_UVNoiseScale = 0.004
-			_DetailTex = OR/EVE/Textures/detaileve1
-			_UVNoiseTex = OR/EVE/Textures/uvnoise1
 			_Color = 255,255,255,225
 			_MainTex
 			{
 				value = OR/EVE/Textures/Echo_Clouds2
 			}
 		}
+	
 		layer2D
 		{
+			shadowMaterial
+			{
+			}
 			macroCloudMaterial
 			{
 				_FalloffScale = 10
 				_RimDist = 0.001
+				_DetailDist = 2E-06
 				_FalloffPow = 0.7
 				_InvFade = 0.02
 			}
@@ -136,10 +141,14 @@ EVE_CLOUDS
 		}
 		layer2D
 		{
+			shadowMaterial
+			{
+			}
 			macroCloudMaterial
 			{
 				_FalloffScale = 10
 				_RimDist = 0.001
+				_DetailDist = 2E-06
 				_FalloffPow = 0.7
 				_InvFade = 0.02
 			}
@@ -848,43 +857,6 @@ EVE_CLOUDS
 			_MainTex
 			{
 				value = OR/EVE/Textures/Rage_Clouds_Dark
-			}
-			_DetailTex
-			{
-				value = OR/EVE/Textures/detaileve1
-			}
-			_UVNoiseTex
-			{
-				value = OR/EVE/Textures/uvnoise1
-			}
-		}
-		layer2D
-		{
-			macroCloudMaterial
-			{
-				_RimDist = 1.2E-05
-				_RimDistSub = 2E-07
-			}
-		}
-	}
-	OBJECT
-	{
-		name = Serenity-layers1
-		body = Serenity
-		altitude = 45000
-		speed = 0,400,0
-		offset = 0,180,0
-		settings
-		{
-			_UVNoiseStrength = 0.0035
-			_UVNoiseScale = 0.035
-			_UVNoiseAnimation = 0.02,0.01
-			_DetailScale = 16
-			_DistFade = 2
-			_Color = 225,225,225,200
-			_MainTex
-			{
-				value = OR/EVE/Textures/Serenity_Clouds_Light
 			}
 			_DetailTex
 			{
