--- a/OR/scatterer/config/planetsList.cfg
+++ b/OR/scatterer/config/planetsList.cfg
@@ -12,8 +12,14 @@
 			hasOcean = False
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = False
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Scar
+			}
 		}
 		Item
 		{
@@ -26,6 +32,12 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Char
+			}
 		}
 		Item
 		{
@@ -38,6 +50,13 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Vista
+				Item = Maar
+			}
 		}
 		Item
 		{
@@ -50,6 +69,14 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Abyss
+				Item = Icebound
+				Item = Silence
+			}
 		}
 		Item
 		{
@@ -62,6 +89,14 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Icebound
+				Item = Silence
+				Item = Rage
+			}
 			
 		}
 		Item
@@ -75,6 +110,12 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Tension
+			}
 		}
 		Item
 		{
@@ -87,6 +128,14 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Siren
+				Item = Hydra
+				Item = Cetus
+			}
 		}
 		Item
 		{
@@ -99,6 +148,14 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Abyss
+				Item = Rage
+				Item = Icebound
+			}
 		}
 		Item
 		{
@@ -111,6 +168,12 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Odyssey
+			}
 		}
 		Item
 		{
@@ -123,6 +186,12 @@
 			usesCloudIntegration = True
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,1.0,1.0
+			cloudIntegrationUsesScattererSunColors = False
+			sunsUseIntensityCurves = False
+			eclipseCasters
+			{
+				Item = Odyssey
+			}
 		}
 	}
 }
