--- a/OR/Configs/Fracture.cfg
+++ b/OR/Configs/Fracture.cfg
@@ -26,7 +26,7 @@
 			ScienceValues
 			{
 				landedDataValue = 6
-				splashedDataValue = 15 //Seriously, if you land here, you deserve the science.
+				splashedDataValue = 15 //Seriously -- if you land here, you deserve the science.
 				flyingLowDataValue = 5
 				flyingHighDataValue = 4
 				inSpaceLowDataValue = 3.5
@@ -133,8 +133,14 @@
 			}
 			OnDemand
 			{
-				texture = OR/OR_Textures/PluginData/Fracture_Watermap_New.dds
-				normals = OR/OR_Textures/PluginData/Fracture_Normal.png
+				texture = OR/OR_Textures/PluginData/Fracture_Watermap_New2.dds
+				normals = OR/OR_Textures/PluginData/Fracture_Normal.dds
+			}
+			VertexColorMapEmissive
+			{
+				map = OR/OR_Textures/PluginData/Fracture_Watermap_New2.dds
+				brightness = 1
+				transparency = 0.5
 			}
 		}		
 		Atmosphere				
