--- a/OR/Configs/Scourge.cfg
+++ b/OR/Configs/Scourge.cfg
@@ -153,6 +153,12 @@
 				texture = OR/OR_Textures/PluginData/Scourge_Watermap_New.dds
 				normals = OR/OR_Textures/PluginData/Scourge_Normal.png
 			}
+			VertexColorMapEmissive
+			{
+				map = OR/OR_Textures/PluginData/Scourge_Emissive.dds
+				brightness = 1
+				transparency = 0.5
+			}
 		}		
 		Atmosphere				
 		{				
@@ -458,7 +464,7 @@
 							mesh = OR/OR_Textures/PluginData/Models/scourge_mega_spike.obj
 							allowedBiomes = Pulsating Hills,Peaks
 							castShadows = False
-							densityFactor = 1
+							densityFactor = 0.07
 							maxCache = 512
 							maxCacheDelta = 32
 							maxLevelOffset = 0
@@ -578,6 +584,14 @@
 							}
 						}
 					}				
+				}
+				VertexColorMapEmissive
+				{
+					order = 2
+					enabled = True
+					map = OR/OR_Textures/PluginData/Scourge_Emissive.dds
+					brightness = 1
+					transparency = 0.5
 				}
 				VertexSimplexHeight
 				{
