--- a/OR/Configs/Siren.cfg
+++ b/OR/Configs/Siren.cfg
@@ -325,41 +325,43 @@
 				}
 				VertexSimplexHeight
 				{
-					deformity = 200
-					frequency = 0.6
-					octaves = 3
+					deformity = 75
+					frequency = 9
+					octaves = 5
 					persistence = 0.7
 					seed = 77444
-					enabled = true
 					order = 2
+					enabled = True
+					name = VertexSimplexHeight
 				}
 				VertexSimplexHeightAbsolute
 				{
-					name = HeightMod1
-					seed = 112
 					deformity = 100
-					octaves = 3
+					frequency = 5
+					octaves = 4
 					persistence = 0.5
-					frequency = 4
-					enabled = true
+					seed = 112
 					order = 2
+					enabled = True
+					name = HeightMod1
 				}
 				VertexSimplexHeightAbsolute
 				{
-					name = HeightMod2
-					seed = 122
-					deformity = 200
+					deformity = 100
+					frequency = 3
 					octaves = 6
 					persistence = 0.5
-					frequency = 3
-					enabled = true
+					seed = 122
 					order = 3
+					enabled = True
+					name = HeightMod2
 				}
 				VertexColorMap
 				{
-					map = OR/OR_Textures/PluginData/Siren_Color_New.dds 
+					map = OR/OR_Textures/PluginData/Siren_Color_New.dds
 					order = 20
-					enabled = true
+					enabled = True
+					name = VertexColorMap
 				}
 				VertexMitchellNetravaliHeightMap
 				{
@@ -376,16 +378,24 @@
 				VertexHeightNoiseVertHeightCurve2
 				{
 					deformity = 200
-					ridgedMode = Low
-					ridgedAddSeed = 5774
 					ridgedAddFrequency = 5
 					ridgedAddLacunarity = 4
-					ridgedAddOctaves = 4	
-					ridgedSubSeed = 2733
+					ridgedAddOctaves = 4
+					ridgedAddSeed = 5774
+					ridgedMode = Low
 					ridgedSubFrequency = 10
 					ridgedSubLacunarity = 5
 					ridgedSubOctaves = 6
-
+					ridgedSubSeed = 2733
+					simplexFrequency = 10
+					simplexHeightEnd = 1500
+					simplexHeightStart = 500
+					simplexOctaves = 5
+					simplexPersistence = 0.6
+					simplexSeed = 8899
+					order = 32
+					enabled = True
+					name = 1HeightNoise
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -393,16 +403,6 @@
 						key = 0.6 0.25 0.5 0.5
 						key = 1 1 1.005844 1.005844
 					}
-
-					simplexHeightStart = 500
-					simplexHeightEnd = 1500
-					simplexSeed = 8899
-					simplexOctaves = 5
-					simplexPersistence = 0.6
-					simplexFrequency = 10
-					name = 1HeightNoise
-					enabled = true
-					order = 32
 				}
 				VertexRidgedAltitudeCurve
 				{
@@ -422,17 +422,16 @@
 					order = 35
 					enabled = True
 					name = HeightNoise
-					index = 0
 					simplexCurve
 					{
-						key = 0.00724 0.00070 0
-						key = 0.075  -0.0007 0.03 0.03
-						key = 0.3     0.4 11.27714 11.27714
-						key = 0.31    0.2 -17.29987 -17.29987
-						key = 0.35    0.0015 -0.02 -0.02
-						key = 0.42    0.1432 4.5596 4.5596
-						key = 0.5     0.640 0.03 0.03
-						key = 1.0     0.6552 -0.02 -0.02
+						key = 0.00724 0.0007 0 0
+						key = 0.075 -0.0007 0.03 0.03
+						key = 0.3 0.4 11.27714 11.27714
+						key = 0.31 0.2 -17.29987 -17.29987
+						key = 0.35 0.0015 -0.02 -0.02
+						key = 0.42 0.1432 4.5596 4.5596
+						key = 0.5 0.64 0.03 0.03
+						key = 1 0.6552 -0.02 -0.02
 					}
 				}
 				VoronoiCraters
