--- a/OR/Configs/Windswept.cfg
+++ b/OR/Configs/Windswept.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#E0A896>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nAs the name suggests, Windswept is a desert planet that suffers from frequent dust storms. It has large red basins and sandy continents, indicating that the planet used to have shallow oceans and potentially life. Because Windswept is no longer tectonically active, it may Be possible to find intact fossils on its surface. \n\nWhen we first entered the Ignotum System, Windswept's surface was hidden under a dense cloud of dust. It was only later that we realized the planet is more similar to Duna than Eve.\n\nWEATHER REPORT: Mild. Micrometeorites flung from Tension into Windswept's atmosphere create gentle, high-altitude clouds. These clouds obscure little of the surface.
+			description = <color=#E0A896>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nAs the name suggests, Windswept is a desert planet that suffers from frequent dust storms. It has large red basins and sandy continents, indicating it used to have shallow oceans and likely life. Because Windswept is no longer tectonically active, it may Be possible to find intact fossils on its surface. \n\nWhen we first entered the Ignotum System, Windswept's surface was hidden under a dense cloud of dust. It was only later that we realized the planet is more similar to Duna than Eve.\n\nWEATHER REPORT: Mild. Micrometeorites flung from Tension into Windswept's atmosphere create gentle, high-altitude clouds. These clouds obscure little of the surface.
 			
 			radius = 580000
 			geeASL = 0.96
@@ -749,41 +749,43 @@
 				}
 				VertexSimplexHeight
 				{
-					deformity = 100
-					frequency = 0.6
-					octaves = 4
+					deformity = 200
+					frequency = 44
+					octaves = 5
 					persistence = 0.7
 					seed = 36435
-					enabled = true
 					order = 2
+					enabled = True
+					name = VertexSimplexHeight
 				}
 				VertexSimplexHeightAbsolute
 				{
-					name = HeightMod1
-					seed = 211
-					deformity = 50
-					octaves = 3
+					deformity = 200
+					frequency = 7
+					octaves = 6
 					persistence = 3
-					frequency = 5
-					enabled = true
+					seed = 211
 					order = 2
+					enabled = True
+					name = HeightMod1
 				}
 				VertexSimplexHeightAbsolute
 				{
-					name = HeightMod2
-					seed = 345
-					deformity = 75
+					deformity = 200
+					frequency = 8
 					octaves = 6
 					persistence = 2
-					frequency = 4
-					enabled = true
+					seed = 345
 					order = 3
+					enabled = True
+					name = HeightMod2
 				}
 				VertexColorMap
 				{
-					map = OR/OR_Textures/PluginData/Windswept_Color_New.dds  
+					map = OR/OR_Textures/PluginData/Windswept_Color_New.dds
 					order = 20
-					enabled = true
+					enabled = True
+					name = VertexColorMap
 				}
 				VertexMitchellNetravaliHeightMap
 				{
@@ -800,16 +802,24 @@
 				VertexHeightNoiseVertHeightCurve2
 				{
 					deformity = 2000
-					ridgedMode = Low
-					ridgedAddSeed = 35732
 					ridgedAddFrequency = 31
 					ridgedAddLacunarity = 4
 					ridgedAddOctaves = 4
-					ridgedSubSeed = 2463
+					ridgedAddSeed = 35732
+					ridgedMode = Low
 					ridgedSubFrequency = 26
 					ridgedSubLacunarity = 3
 					ridgedSubOctaves = 5
-
+					ridgedSubSeed = 2463
+					simplexFrequency = 31
+					simplexHeightEnd = 1400
+					simplexHeightStart = 1000
+					simplexOctaves = 4
+					simplexPersistence = 0.6
+					simplexSeed = 224674
+					order = 32
+					enabled = True
+					name = 1HeightNoise
 					simplexCurve
 					{
 						key = 0 0 0 0
@@ -817,21 +827,11 @@
 						key = 0.6 0.25 0.5 0.5
 						key = 1 1 1.005844 1.005844
 					}
-
-					simplexHeightStart = 1000
-					simplexHeightEnd = 1400
-					simplexSeed = 224674
-					simplexOctaves = 4
-					simplexPersistence = 0.6
-					simplexFrequency = 31
-					name = 1HeightNoise
-					enabled = true
-					order = 32
 				}
 				VertexRidgedAltitudeCurve
 				{
-					deformity = 750
-					ridgedAddFrequency = 50
+					deformity = 100
+					ridgedAddFrequency = 22
 					ridgedAddLacunarity = 2.5
 					ridgedAddOctaves = 4
 					ridgedAddSeed = 212354
@@ -846,17 +846,16 @@
 					order = 35
 					enabled = True
 					name = HeightNoise
-					index = 0
 					simplexCurve
 					{
-						key = 0.00724 0.00070 0
-						key = 0.075  -0.0007 0.03 0.03
-						key = 0.3     0.4 11.27714 11.27714
-						key = 0.31    0.2 -17.29987 -17.29987
-						key = 0.35    0.0015 -0.02 -0.02
-						key = 0.42    0.1432 4.5596 4.5596
-						key = 0.5     0.640 0.03 0.03
-						key = 1.0     0.6552 -0.02 -0.02
+						key = 0.00724 0.0007 0 0
+						key = 0.075 -0.0007 0.03 0.03
+						key = 0.3 0.4 11.27714 11.27714
+						key = 0.31 0.2 -17.29987 -17.29987
+						key = 0.35 0.0015 -0.02 -0.02
+						key = 0.42 0.1432 4.5596 4.5596
+						key = 0.5 0.64 0.03 0.03
+						key = 1 0.6552 -0.02 -0.02
 					}
 				}
 			}
