--- a/OR/scatterer/config/Planets/Fracture/ocean.cfg
+++ b/OR/scatterer/config/Planets/Fracture/ocean.cfg
@@ -11,7 +11,7 @@ Scatterer_ocean
 		m_whiteCapStr = 0.469999999
 		shoreFoam = 1
 		m_farWhiteCapStr = 0.469999999
-		m_oceanUpwellingColor = 2,0.600000024,0
+		m_oceanUpwellingColor = 10,10,0
 		m_UnderwaterColor = 1,0.200000003,0
 		offScreenVertexStretch = 1.25
 		alphaRadius = 1000
